--- a/calendar_generator/templates/calendar_generator/custom.html
+++ b/calendar_generator/templates/calendar_generator/custom.html
@@ -24,11 +24,10 @@
 <h2>Generate a PDF</h2>
 
 <div class="noprint">
-    {% for style in styles %}
-        
-        <p><strong>{{ style.name }}</strong>:
+    {% for color_set in color_sets %}
+        <p><strong>{{ color_set.name }}</strong>:
             {% for layout in layouts %}
-                <a href="{% url 'calendar_generator:pdf-single-grid' calendar_id=calendar.pk color_set_id=style.pk layout_id=layout.pk start_year=start_date.year start_month=start_date.month start_day=start_date.day end_year=end_date.year end_month=end_date.month end_day=end_date.day %}?title={{ title|urlencode}}">{{ layout }}</a>
+                <a href="{% url 'calendar_generator:pdf-single-grid' calendar_id=calendar.pk color_set_id=color_set.pk layout_id=layout.pk start_year=start_date.year start_month=start_date.month start_day=start_date.day end_year=end_date.year end_month=end_date.month end_day=end_date.day %}?title={{ title|urlencode}}">{{ layout }}</a>
 
                 {% if not forloop.last %}&bullet;{% endif %}
             {% endfor %}
