Updated login system (#69)
* Use the updated Google Auth

* Add strict origin when cross to fix Google login

* Global google signin

* Somewhat fully working google flow

* Remove social login context

* Auto sign in

* Update auto select

* Don't prompt for auto login on login

* Fix unauthorized messages

* Strip away a bunch of unneeded boilerplate

* Re-vamp nav with a a builder and user hover

* Clean up typing

* Clean up auto login

* Remove extra JS

* Clean up HTML

* Remove jQuery

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
     <meta name="msapplication-TileColor" content="#603cba">
     <meta name="msapplication-config" content={% static 'img/icons/browserconfig.xml' %}>
     <meta name="theme-color" content="#ffffff">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+    
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
 
     {% bootstrap_css %}
     {% bootstrap_javascript jquery='full' %}
@@ -45,6 +48,18 @@
         {% block content %}
         {% endblock %}
     </div>
+
+    <div
+        id="g_id_onload" 
+        data-client_id="{{ google_oauth_client_id }}"
+        data-context="signin"
+        data-ux_mode="popup"
+        data-auto_select="true"
+        {% if disable_auto_login %} 
+            data-auto_prompt="false"
+        {% endif %}
+        data-login_uri="{{ google_login_url }}?redirect_to={{ google_redirect_to }}"
+        data-csrfmiddlewaretoken="{{ csrf_token }}">
 </body>
 
 </html>
