--- a/accounts/templates/accounts/login_social.html
+++ b/accounts/templates/accounts/login_social.html
@@ -3,16 +3,6 @@
 
 {% block title %}Log in{% endblock %}
 
-{% block headextra %}
-    <script src="https://apis.google.com/js/api:client.js"></script>
-
-    {{ auth_data|json_script:"auth_data" }}
-    {{ next|json_script:"next" }}
-    {{ csrf_token|escapejs|json_script:"csrf_token" }}
-
-    <script src="{% static 'accounts/social_login.js' %}"></script>
-{% endblock %}
-
 {% block breadcrumbs %}
     {{ block.super }}
 
@@ -20,35 +10,37 @@
 {% endblock %}
 
 {% block content %}
+
+<h1>Rectory Apps Login</h1>
+
+{% if next %}
+    {% if user.is_authenticated %}
+        <p>Your account ({{ request.user }}) doesn't have access to this page. To proceed, please log in with an account that has access.</p>
+    {% endif %}
+{% else %}
+    {% if user.is_authenticated %}
+        <p>You are logged in as {{ request.user }}</p>
+    {% endif %}
+{% endif %}
+
 <div class="row">
-    <div class="col-lg-3"></div>
-    <div class="col-lg-6">
-        <h1>Rectory Apps Login</h1>
-
-        {% if next %}
-            {% if user.is_authenticated %}
-                <p>Your account ({{ request.user }}) doesn't have access to this page. To proceed, please log in with an account that has access.</p>
-            {% endif %}
-        {% else %}
-            {% if user.is_authenticated %}
-                <p>You are logged in as {{ request.user }}</p>
-            {% endif %}
-        {% endif %}
-
-        <div id="signin-section">
-            {% if google_hosted_domain %}
-                <button type="button" class="btn btn-primary btn-block google-sign-in hide-during-sign-in">Log in with your {{ google_hosted_domain|capfirst }} Google account</button>
-            {% else %}
-                <button type="button" class="btn btn-primary btn-block google-sign-in hide-during-sign-in">Log in with your Google account</button>
-            {% endif %}
-
-            <a class="btn btn-secondary btn-block hide-during-sign-in" 
-                href="{% url 'accounts:login-native' %}{% if next %}?{{ redirect_field_name }}={{ next }}{% endif %}">
-                    Administrative Login (use only as directed)
-            </a>
+    <div class="col-12">
+        <div class="g_id_signin"
+            data-type="standard"
+            data-shape="rectangular"
+            data-theme="filled_blue"
+            data-text="signin_with"
+            data-size="large"
+            data-logo_alignment="left">
         </div>
+    </div>
+</div>
 
-        <div class="show-during-sign-in" style="display:none">Hang tight, we are signing you in</div></div>
-    <div class="col-lg-3"></div>
+<div class="row">
+    <div class="col-12">
+        <a href="{% url 'accounts:login-native' %}{% if next %}?{{ redirect_field_name }}={{ next }}{% endif %}">
+            Administrative Login (use only as directed)
+        </a>
+    </div>
 </div>
 {% endblock %}
