--- a/nav/templates/nav/nav.html
+++ b/nav/templates/nav/nav.html
@@ -8,6 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             {% nav_item "Admin" "admin:index" "special:staff" %}
+            {% nav_item "SIS Tools" "blackbaud:index" "special:staff" %}
             {% nav_item "Calendar Generator" "calendar_generator:calendar-list" "calendar_generator.view_calendar" %}
         </ul>
 
