--- a/enrichment/templates/enrichment/index.html
+++ b/enrichment/templates/enrichment/index.html
@@ -1,6 +1,6 @@
 {% extends "enrichment/base.html" %}
 
-{% load django_bootstrap_breadcrumbs %}
+{% load django_bootstrap_breadcrumbs blackbaud %}
 
 {% block breadcrumbs %}
     {{ block.super }}
@@ -8,12 +8,15 @@
 
 
 {% block content %}
+    {% is_advisor as user_is_advisor %}
     <h1>Rectory Enrichment</h1>
     <p>
         <ul class="list-group">
-            <li class="list-group-item">
-                <a href="{% url 'enrichment:advisor-assign' %}">Assign my advisees</a>
-            </li>
+            {% if user_is_advisor %}
+                <li class="list-group-item">
+                    <a href="{% url 'enrichment:advisor-assign' %}">Assign my advisees</a>
+                </li>
+            {% endif %}
         </ul>
     </p>
 {% endblock %}
