--- a/enrichment/templates/enrichment/advisor.html
+++ b/enrichment/templates/enrichment/advisor.html
@@ -10,37 +10,40 @@
 
 {% block headextra %}
     {{ block.super }}
-    {{ all_options|json_script:"all-options"}}
+    {{ grid.options_for_json|json_script:"all-options"}}
     {% url 'enrichment:advisor-assign-save' as assign_url %}
     {{ assign_url|json_script:"assign-url" }}
 {% endblock %}
 
 {% block content %}
-    <h1>My Advisees</h1>
-
-    <h2>Week of {{ week_of }}</h2>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Advisee</th>
-                {% for slot in slots %}
-                    <th>{{ slot.date }}</th>
-                {% endfor %}
-            </tr>
-        </thead>
-        <tbody>
-            {% for advisee, cols in grid %}
-                <tr>
-                    <th>{{ advisee }}</th>
-                    {% for slot_data in cols %}
-                        <td>
-                            <span>
-                                {% include "enrichment/partial/slot_grid_item.html" with data=slot_data student=advisee slot=slot %}
-                            </span>
-                        </td>
+    <div class="row">
+        <div class="col-12">
+            <h1>My Advisees</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-9">
+            <h2>Week of {{ week_of }}</h2>
+            {% include "enrichment/partial/grid_multidate.html" with grid=grid %}
+            <p>
+                <a href="{% url 'enrichment:advisor-assign' %}?date={{ last_week|date:"Y-m-d"}}">Previous week</a>
+                &bullet;
+                <a href="{% url 'enrichment:advisor-assign' %}">This week</a>
+                &bullet;
+                <a href="{% url 'enrichment:advisor-assign' %}?date={{ next_week|date:"Y-m-d"}}">Next week</a>
+            </p>
+        </div>
+        <div class="col-3">
+            {% if jump_weeks %}
+                <h3>Jump to</h3>
+                <ul class="list-group">
+                    {% for week in jump_weeks %}
+                        <li class="list-group-item">
+                            <a href="{% url 'enrichment:advisor-assign' %}?date={{ week|date:"Y-m-d"}}">Week of {{ week }}</a>
+                        </li>
                     {% endfor %}
-                </tr>
-            {% endfor %}
-    </table>
-
+                </ul>
+            {% endif %}
+        </div>
+    </div>
 {% endblock %}
