--- a/enrichment/templates/enrichment/index.html
+++ b/enrichment/templates/enrichment/index.html
@@ -14,7 +14,15 @@
         <ul class="list-group">
             {% if user_is_advisor %}
                 <li class="list-group-item">
-                    <a href="{% url 'enrichment:advisor-assign' %}">Assign my advisees</a>
+                    <a href="{% url 'enrichment:assign' %}">Assign my advisees</a>
+                </li>
+            {% endif %}
+            {% if perms.enrichment.assign_all_advisees %}
+                <li class="list-group-item">
+                    <a href="{% url 'enrichment:assign-all' %}">Assign all advisees</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="{% url 'enrichment:assign-unassigned' %}">Assign unassigned advisees</a>
                 </li>
             {% endif %}
         </ul>
