--- a/enrichment/templates/enrichment/index.html
+++ b/enrichment/templates/enrichment/index.html
@@ -24,6 +24,12 @@
                 <li class="list-group-item">
                     <a href="{% url 'enrichment:assign-unassigned' %}">Assign unassigned advisees</a>
                 </li>
+                <li class="list-group-item">
+                    <a href="{% url 'enrichment:advisee-list' %}">Advisee list</a>
+                </li>
+                <li class="list-group-item">
+                    <a href="{% url 'enrichment:advisor-list' %}">Advisor list</a>
+                </li>
             {% endif %}
         </ul>
     </p>
