General enrichment cleanup
- Clean up logging
- Clean up types in stored email
- Use explicit slot/student mapping
- Clean up views and permissions
  - Clean up how slot/student edit calculations are referenced
  - Don't allow a user without the set_admin_locked permission to set admin locked
  - Remove the ignore admin locked permission, rolling it into set admin locked
  - Switch students to cached properties
  - Redirect users with no advisors back to enrichment landing, mostly an issue during hijack release
  - Remove usage outside of admin for change_signup in favor of set_admin_locked

--- a/enrichment/templates/enrichment/partial/slot_grid_item.html
+++ b/enrichment/templates/enrichment/partial/slot_grid_item.html
@@ -6,7 +6,7 @@
     data-preferred-options="{{ data.preferred_option_ids | join:','}}"
     data-remaining-options="{{ data.remaining_option_ids | join:','}}"
     data-current-item-id="{% if data.currently_selected %}{{ data.currently_selected.current_option.id }}{% endif %}"
-    data-allow-locking="{% if perms.enrichment.change_signup %}1{% else %}0{% endif %}"
+    data-allow-locking="{% if perms.enrichment.set_admin_locked %}1{% else %}0{% endif %}"
     data-locked="{% if data.currently_selected and data.currently_selected.admin_locked%}1{% else %}0{% endif %}"
     >
     {% if data.editable %}
