--- a/enrichment/templates/enrichment/email/advisee_signups.html
+++ b/enrichment/templates/enrichment/email/advisee_signups.html
@@ -3,12 +3,9 @@
 {% for slot, current_selection in slots %}
     <p>
         {% if current_selection %}
-            Your assigned enrichment session on {{ slot.date | date:"l F, jS" }}
-            {% if slot.description %}
-                ({{ slot.description }})
-            {% endif %}
-            is in {{ current_selection.location }}
-            with {{ current_selection.teacher.formal_name }}
+            Your assigned enrichment session on 
+            {{ slot.date | date:"l F, j" }}<sup style="font-size: smaller;">{{ slot.date | date:"S"}}</sup>
+            is {{ current_selection.display }}
         {% else %}
             You were not assigned an enrichment session on {{ slot.date | date:"l F, jS" }}.
             Please report to the education office during enrichment for further instructions
