--- a/templates/home.html
+++ b/templates/home.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <h1>Rectory Apps</h1>
-    <p>This system is for Rectory School use only. Today will be a good day, and always remember that Adam likes pie.</p>
+    <p>This system is for Rectory School use only. If you have any questions on its usage, please contact the Technology Department.</p>
 {% endblock %}
