--- a/enrichment/templates/enrichment/index.html
+++ b/enrichment/templates/enrichment/index.html
@@ -31,6 +31,11 @@
                     <a href="{% url 'enrichment:advisor-list' %}">Advisor list</a>
                 </li>
             {% endif %}
+            {% if perms.enrichment.view_reports %}
+                <li class="list-group-item">
+                    <a href="{% url 'enrichment:weekly-report' %}">Assignment report</a>
+                </li>
+            {% endif %}
         </ul>
     </p>
 {% endblock %}
