Initial evaluations system
- Tag/category management
- Upload configurations
- Question set management
- The ability for students to take evaluations

--- a/nav/templates/nav/nav.html
+++ b/nav/templates/nav/nav.html
@@ -16,6 +16,7 @@
             {% endif %}
             {% nav_item "SIS Tools" "blackbaud:index" "special:staff" %}
             {% nav_item "Calendar Generator" "calendar_generator:calendar-list" "calendar_generator.view_calendar" %}
+            {% nav_item "Evaluations" "evaluations:index" %}
         </ul>
 
         <ul class="navbar-nav mr-right">
