Don't show upload/download for new upload configs

--- a/evaluations/templates/admin/evaluations/uploadconfiguration/change_form.html
+++ b/evaluations/templates/admin/evaluations/uploadconfiguration/change_form.html
@@ -9,8 +9,10 @@
 
     <ul class="object-tools">
         <li><a href="history/" class="historylink">{% trans "History" %}</a></li>
-        <li><a id="uploadconfig-upload-button" href="#">Upload</a></li>
-        <li><a href="{% url "admin:evaluations_uploadconfiguration_download_template" pk=object_id %}">Download Template</a></li>
+        {% if object_id %}
+            <li><a id="uploadconfig-upload-button" href="#">Upload</a></li>
+            <li><a href="{% url "admin:evaluations_uploadconfiguration_download_template" pk=object_id %}">Download Template</a></li>
+        {% endif %}
         {% if has_absolute_url %}<li><a href="../../../r/{{ content_type_id }}/{{ object_id }}/" class="viewsitelink">{% trans "View on site" %}</a></li>{% endif%}
     </ul>
 
@@ -25,15 +27,17 @@
 {% block content %}
     {{ block.super }}
 
-    <form 
-        id="uploadconfig-upload-form"
-        method="POST"
-        action="{% url "admin:evaluations_uploadconfiguration_upload_template" pk=object_id %}"
-        enctype="multipart/form-data"
-        style="display: none"
-        >
-        {% csrf_token %}
-        <input id="uploadconfig-upload-form-file" type="file" name="file">
-        <input type="submit" value="Upload">
-    </form>
+    {% if object_id %}
+        <form 
+            id="uploadconfig-upload-form"
+            method="POST"
+            action="{% url "admin:evaluations_uploadconfiguration_upload_template" pk=object_id %}"
+            enctype="multipart/form-data"
+            style="display: none"
+            >
+            {% csrf_token %}
+            <input id="uploadconfig-upload-form-file" type="file" name="file">
+            <input type="submit" value="Upload">
+        </form>
+    {% endif %}
 {% endblock %}
